--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Todo List</title>    
+    <style>
+        h1{background: url(/assets/logo.png) no-repeat center;    margin-bottom: 0;    text-indent: -10000px;}
+        body{    background: #0d1521;    font-family: tahoma;    color: #989898;}
+        h2{font-size: 48px;text-transform: uppercase;letter-spacing: 2px;text-align: center;}
+        a{color: #989898;}
+        a:hover{color: aliceblue;}
+    </style>
 </head>
 <body>
-    <h1>This is the homepage!</h1>
+    <h1>Title</h1>
+    <h2>Welcome to the awesome TX Todo List!</h2>
+    <h2><a href="/todo">Click Me</a> </h2>   
 </body>
 </html>
